# CityInfrastructure

./: AI_usage-phases_1_and_2.md  AI_usage.md  CMakeLists.txt  active_reports-fabric  city_hub  city_hub.c  city_manager  filter.c  filter.h  fs_utils.c  fs_utils.h  main.c  models.h  monitor_reports  monitor_reports.c  readme.md  reports.c  reports.h  scorer  scorer.c
balcescu/: logged_district
downtown/: logged_district
fabric/: logged_district
soarelui/: logged_district
